--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,10 @@ code {
   display: flex;
   justify-content: center;
 }
+
+#root {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
