--- a/src/pages/Search.css
+++ b/src/pages/Search.css
@@ -40,3 +40,36 @@
   background-color: #E1E5EB;
   color: black;
 }
+
+.all-album {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.link-all-album {
+  text-decoration: none;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 20%;
+  background-color: #FFFFFF;
+  margin: 20px;
+  border: 2px solid #E1E5EB;
+  box-shadow: 2px 4px 4px #E1E5EB;
+}
+
+.album-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 20px;
+  text-align: center;
+}
+
+.album-div img {
+  width: 90%;
+  margin: 10px;
+}
