--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,48 +1,46 @@
-#login-div {
-  display: flex;
+.login-div {
   align-items: center;
+  background-color: white;
+  display: flex;
+  height: 1024px;
   justify-content: center;
   width: 1440px;
-  height: 1024px;
-  left: 0px;
-  top: 0px;
-  background-color: #FAFAFA;
 }
 
-#login-form {
+.login-form {
+  align-items: center;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 4px 4px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 697px;
   height: 314px;
+  justify-content: space-evenly;
   left: 372px;
   top: 431px;
-  border-radius: 10px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  background: #FFFFFF;
+  width: 697px;
 }
 
-#name-input {
-  padding: 12px 16px;
-  width: 519px;
+.name-input {
+  background-color: white;
+  border-radius: 7px;
+  box-shadow: 2px 4px 4px #e1e5ee;
   height: 45px;
   left: 454px;
+  padding: 12px 16px;
   top: 525px;
-  background-color: #FFFFFF;
-  box-shadow: 2px 4px 4px #E1E5EB;
-  border-radius: 7px;
+  width: 519px;
 }
 
-#btn-form {
-  background-color: #003BE5;
-  color: #FFFFFF;
+.btn-form {
+  align-items: center;
+  background-color: #003be5;
+  border-radius: 7px;
+  box-shadow: 4px 4px rgba(0, 0, 0, 0.25);
+  color: white;
   display: flex;
   flex-direction: row;
-  width: 350px;
   justify-content: center;
-  align-items: center;
   padding: 8px 32px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 7px;
+  width: 350px;
 }
