--- a/src/pages/Search.css
+++ b/src/pages/Search.css
@@ -1,43 +1,34 @@
-
-#search-form {
+.search-form {
+  align-items: center;
+  background-color: white;
   display: flex;
-  width: 100%;
   height: 200px;
   justify-content: center;
-  align-items: center;
-  background-color: #FFFFFF;
+  width: 100%;
 }
 
-#input-search {
-  /* 
-  width: 519px;
-  height: 45px;
-  left: 454px;
-  top: 525px;
-  background-color: #FFFFFF;
-  box-shadow: 2px 4px 4px #E1E5EB;
-  border-radius: 7px; */
+.input-search {
+  background-color: white;
+  border: 1px solid #3d495c;
+  border-radius: 7px;
+  box-shadow: 2px 4px 4px #e1e5eb;
+  height: 25px;
   padding: 12px 16px;
   width: 419px;
-  height: 25px;
-  background-color: #FFFFFF;
-  box-shadow: 2px 4px 4px #E1E5EB;
-  border-radius: 7px;
-  border: 1px solid #3D495C
 }
 
-#btn-search {
-  background-color: #003BE5;
-  color: #FFFFFF;
-  margin-left: 15px;
-  width: 134px;
-  height: 45px;
-  padding: 8px 32px;
+.btn-search {
+  background-color: #003be5;
   border-radius: 2px;
+  color: white;
+  height: 45px;
+  margin-left: 15px;
+  padding: 8px 32px;
+  width: 134px;
 }
 
-#btn-search:disabled {
-  background-color: #E1E5EB;
+.btn-search:disabled {
+  background-color: #e1e5eb;
   color: black;
 }
 
@@ -48,28 +39,34 @@
 }
 
 .link-all-album {
-  text-decoration: none;
+  align-items: center;
+  background-color: white;
+  border: 2px solid #e1e5eb;
+  box-shadow: 2px 4px 4px #e1e5eb;
   color: black;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 20%;
-  background-color: #FFFFFF;
   margin: 20px;
-  border: 2px solid #E1E5EB;
-  box-shadow: 2px 4px 4px #E1E5EB;
+  text-decoration: none;
+  width: 20%;
+}
+
+.link-all-album:hover {
+  background-color: #f8f6f6;
+  border: 2px solid #036b52;
+  box-shadow: 2px 4px 4px #036b52;
 }
 
 .album-div {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 100%;
   margin: 20px;
   text-align: center;
+  width: 100%;
 }
 
 .album-div img {
-  width: 90%;
   margin: 10px;
+  width: 90%;
 }
