--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -11,7 +11,7 @@
   align-items: center;
   background: white;
   border-radius: 10px;
-  box-shadow: 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 2px 2px 7px 1px #000;
   display: flex;
   flex-direction: column;
   height: 314px;
